tests/ui/rust-2021/reserved-prefixes-via-macro-2.stderr
error: prefix `hey` is unknown
  --> $DIR/reserved-prefixes-via-macro-2.rs:15:5
   |
LL |     m2021::number_of_tokens_in_a_prefixed_integer_literal!();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     unknown prefix
   |     in this macro invocation
   |
  ::: $DIR/auxiliary/reserved-prefixes-macro-2021.rs:13:1
   |
LL | pub fn number_of_tokens_in_a_prefixed_integer_literal(_: TokenStream) -> TokenStream {
   | ------------------------------------------------------------------------------------ in this expansion of `m2021::number_of_tokens_in_a_prefixed_integer_literal!`
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021

error: prefix `hey` is unknown
  --> $DIR/reserved-prefixes-via-macro-2.rs:17:5
   |
LL |     m2021::number_of_tokens_in_a_prefixed_char_literal!();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     unknown prefix
   |     in this macro invocation
   |
  ::: $DIR/auxiliary/reserved-prefixes-macro-2021.rs:18:1
   |
LL | pub fn number_of_tokens_in_a_prefixed_char_literal(_: TokenStream) -> TokenStream {
   | --------------------------------------------------------------------------------- in this expansion of `m2021::number_of_tokens_in_a_prefixed_char_literal!`
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021

error: prefix `hey` is unknown
  --> $DIR/reserved-prefixes-via-macro-2.rs:19:5
   |
LL |     m2021::number_of_tokens_in_a_prefixed_string_literal!();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     unknown prefix
   |     in this macro invocation
   |
  ::: $DIR/auxiliary/reserved-prefixes-macro-2021.rs:23:1
   |
LL | pub fn number_of_tokens_in_a_prefixed_string_literal(_: TokenStream) -> TokenStream {
   | ----------------------------------------------------------------------------------- in this expansion of `m2021::number_of_tokens_in_a_prefixed_string_literal!`
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021

error: aborting due to 3 previous errors

